genclu/networking.k8s.io_v1_ingress_sourcegraph-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
  labels:
    app: sourcegraph-frontend
    app.kubernetes.io/component: frontend
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: sourcegraph-frontend
  namespace: foobar
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: sourcegraph-frontend
            port:
              number: 30080
        path: /
        pathType: Prefix
